[gd_scene load_steps=5 format=3 uid="uid://df2u7u7wedi5c"]

[ext_resource type="Script" path="res://Scenes/MainScene/Enemy.gd" id="1_k3467"]
[ext_resource type="Texture2D" uid="uid://dp0s77m5y3fm6" path="res://Assets/FlyingCar.png" id="2_jsm3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sarjd"]
size = Vector2(436, 219)

[sub_resource type="CircleShape2D" id="CircleShape2D_gxtkg"]
radius = 1009.0

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_k3467")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sarjd")

[node name="EnemySprite" type="Sprite2D" parent="."]
modulate = Color(0.87451, 0, 0.0784314, 1)
texture = ExtResource("2_jsm3h")
flip_h = true

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_gxtkg")

[node name="Spawnpos" type="Marker2D" parent="."]
position = Vector2(-215, -15)

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
